Tweak conversation index styles to avoid line break inconsistencies

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -744,9 +744,11 @@ body.popup_active {
 		width: 30px;
 	}
 	.colorhex {
+		display: inline-block;
 		font-size: 80%;
 		opacity: 0.8;
 		vertical-align: middle;
+		width: 55px;
 	}
 	.excerpt_meta {
 		display: block;
